@@ -4,8 +4,7 @@ import org.junit.Test;
 import org.openapi4j.core.exception.ResolutionException;
 import org.openapi4j.core.model.AuthOption;
 
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.Arrays;
 
@@ -14,35 +13,35 @@ import static org.junit.Assert.assertNotNull;
 
 public class OAI3ContextTest {
   @Test
-  public void simple() throws URISyntaxException, ResolutionException {
+  public void simple() throws ResolutionException {
     URL specPath = getClass().getResource("/parsing/discriminator.yaml");
 
-    OAI3Context apiContext = new OAI3Context(specPath.toURI());
-    assertEquals(specPath.toURI(), apiContext.getBaseUri());
+    OAI3Context apiContext = new OAI3Context(specPath);
+    assertEquals(specPath, apiContext.getBaseUrl());
     assertNotNull(apiContext.getReferenceRegistry().getRef("#/components/schemas/Cat"));
   }
 
   @Test
-  public void simpleAuth() throws URISyntaxException, ResolutionException {
+  public void simpleAuth() throws ResolutionException {
     URL specPath = getClass().getResource("/parsing/discriminator.yaml");
 
     OAI3Context apiContext = new OAI3Context(
-      specPath.toURI(),
+      specPath,
       Arrays.asList(
         new AuthOption(AuthOption.Type.HEADER, "myHeader", "myValue"),
         new AuthOption(AuthOption.Type.QUERY, "myQueryParam", "myValue", url -> false)
       ));
 
-    assertEquals(specPath.toURI(), apiContext.getBaseUri());
+    assertEquals(specPath, apiContext.getBaseUrl());
     assertNotNull(apiContext.getReferenceRegistry().getRef("#/components/schemas/Cat"));
   }
 
   @Test
-  public void remote() throws ResolutionException {
-    URI specPath = URI.create("https://raw.githubusercontent.com/OAI/OpenAPI-Specification/master/examples/v3.0/petstore.yaml");
+  public void remote() throws ResolutionException, MalformedURLException {
+    URL specPath = new URL("https://raw.githubusercontent.com/OAI/OpenAPI-Specification/master/examples/v3.0/petstore.yaml");
 
     OAI3Context apiContext = new OAI3Context(specPath);
-    assertEquals(specPath, apiContext.getBaseUri());
+    assertEquals(specPath, apiContext.getBaseUrl());
     assertNotNull(apiContext.getReferenceRegistry().getRef("#/components/schemas/Pet"));
   }
 }
